[package]
name = "media_analyzer"
version = "0.10.4"
edition = "2024"
license = "Apache-2.0"
description = "Extract file-based information from photo and video files."
authors = ["Ruurd Bijlsma <ruurd@bijlsma.dev>"]
homepage = "https://github.com/ruurdbijlsma/media_analyzer_rs"
repository = "https://github.com/ruurdbijlsma/media_analyzer_rs"
readme = "README.md"
keywords = ["media", "photo", "video", "analysis", "exif"]
documentation = "https://docs.rs/media_analyzer/latest/media_analyzer/index.html"
exclude = [
    "assets",
    ".github",
    "checks",
    ".idea",
]
categories = ["multimedia::images", "multimedia::video"]

[dependencies]
exiftool = "0.3.1"
rayon = "1.12.0"
regex = "1.13.1"
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "rt", "macros"] }
serde = { version = "1.0.228", default-features = false }
chrono = { version = "0.4.45", default-features = false, features = ["alloc", "serde"] }
chrono-tz = { version = "0.10.3", default-features = false, features = ["serde"] }
tzf-rs = { version = "1.3.6", default-features = false, features = ["bundled"] }
rand = { version = "0.10.2", features = ["thread_rng"], default-features = false }
bon = { version = "3.9.3", default-features = false }
reverse_geocoder = "4.1.1"
rust_iso3166 = "0.2.0"
thiserror = { version = "2.0.18", default-features = false }
blake3 = { version = "1.8.5", features = ["mmap", "rayon"] }
meteostat = "0.4.7"
sunrise = "3.0.0"

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false }
opener = "0.8.5"
walkdir = "2.5.0"

[[bench]]
name = "media_analyzer"
harness = false
